<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.mobile.mavelapp.view.main.MainActivity">

    <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar">
    </include>

    <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@id/toolbar"
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:layout_below="@id/toolbar"
            android:id="@+id/recyclerSearched"
            android:layout_width="match_parent"
            android:background="@color/searchViewColor"
            android:layout_height="match_parent">
    </androidx.recyclerview.widget.RecyclerView>

    <ProgressBar
            android:visibility="gone"
            android:id="@+id/pbLoadingBottom"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:layout_gravity="bottom"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_below="@id/pbLoading" android:layout_marginTop="300dp"/>

</RelativeLayout>