<?xml version="1.0" encoding="utf-8"?>
<Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
         android:elevation="4dp"
         android:background="@color/black">
    <ImageView
            android:id="@+id/marvel_logo"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:src="@drawable/logo_marvel" />
    <SearchView
            android:id="@+id/searchView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:queryHint="Search"/>
</Toolbar>