<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
            android:id="@+id/ivHeroList"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/man" tools:ignore="MissingConstraints"/>


    <TextView app:layout_constraintTop_toTopOf="parent"
              android:id="@+id/tvHeroNameList"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@color/searchViewColor"
              android:textColor="@color/white"
              android:layout_toRightOf="@id/ivHeroList"
              android:layout_centerInParent="true"
              android:layout_marginLeft="20dp"
              android:textSize="20dp"
              android:text="TextView" tools:ignore="MissingConstraints"/>

</RelativeLayout>